gscan2pdf (0.9.31) lucid; urgency=low

  * New upstream release
  * Minor editting of description

 --

gscan2pdf (0.9.30-1) unstable; urgency=low

  * New upstream release.
    Closes: #461086 (embed OCR output at correct position)
    Closes: #510314 (gscan2pdf: Mapping File_Scan to a shortcut key)
    Closes: #557657 (gscan2pdf binarization option [wishlist])
    New Depends: libxml-simple-perl, libgoo-canvas-perl,
	         libproc-processtable-perl
  * Removed URL from description
    Closes: #564325 (gscan2pdf: please remove homepage from description)
  * Fixed VCS-URLs
  * Bumped standards to 3.8.3 (no changes required)
  * Switch to tiny dh7 rules
  * Added ${misc:Depends}

 -- Jeffrey Ratcliffe <Jeffrey.Ratcliffe@gmail.com>  Mon, 01 Feb 2010 20:31:10 +0100

gscan2pdf (0.9.29-1) unstable; urgency=low

  * New upstream release.
    Closes: #526845
     (gscan2pdf: Renaming of frontends breaks current settings)

 -- Jeffrey Ratcliffe <Jeffrey.Ratcliffe@gmail.com>  Mon, 04 May 2009 21:32:43 +0200

gscan2pdf (0.9.28-1) unstable; urgency=low

  * New upstream release.
    Closes: #506150
     (gscan2pdf: pdf creation failes when using LZW compression)
    Closes: #512758 (Error handling: 'Unknown message: "scanimage: sane_read:
     Operation was cancelled"')
    Closes: #512760 (Error reporting: empty document feeder not reported)
    Closes: #515605 (gscan2pdf: repeating save-dialog when saving as pnm)
    Closes: #517913 (gscan2pdf: Tools -> Gimp broken)
    New Depends: libset-intspan-perl, libforks-perl

 -- Jeffrey Ratcliffe <Jeffrey.Ratcliffe@gmail.com>  Thu, 30 Apr 2009 21:51:12 +0200

gscan2pdf (0.9.27-1) unstable; urgency=low

  * New upstream release.
    Closes: #500547 (fails to save PDF files)
    Closes: #497629 (Rotation of pages does work on manual double sided
                                                                      scanning)
    Closes: #497630 (Selection of all odd pages or all even pages)